--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -14,6 +14,7 @@
         android:text="通过自定义内部类实现点击事件"/>
 
     <Button
+        android:id="@+id/btn2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="通过匿名内部类实现点击事件"/>
