--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -20,6 +20,7 @@
         android:text="通过匿名内部类实现点击事件"/>
 
     <Button
+        android:id="@+id/btn3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="通过当前Activity实现点击事件接口"/>
@@ -27,6 +28,6 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="通过XML布局文件属性绑定点击事件"/>
+        android:text="通过XML布局文件属性绑定点击事件" />
 
 </LinearLayout>
