--- a/app/src/main/res/layout/activity_meals_choose.xml
+++ b/app/src/main/res/layout/activity_meals_choose.xml
@@ -39,6 +39,7 @@
                 android:text="@string/name"
                 android:textSize="22sp"/>
             <EditText
+                android:id="@+id/nameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/edit_text_input_hint_name"/>
@@ -57,17 +58,19 @@
                 android:text="@string/sex"
                 android:textSize="22sp"/>
             <RadioGroup
-                android:id="@+id/sex"
+                android:id="@+id/sexRadioGroup"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical">
                 <RadioButton
+                    android:id="@+id/maleRadioButton"
                     android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:text="@string/male"
                     android:textSize="22sp"/>
                 <RadioButton
+                    android:id="@+id/femaleRadioButton"
                     android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:text="@string/female"
@@ -138,7 +141,7 @@
                     android:gravity="center"/>
                 <SeekBar
                     android:id="@+id/seekBar"
-                    android:layout_width="200dp"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:max="100"/>
                 <TextView
