--- a/bookborrowing/src/main/res/layout/activity_main.xml
+++ b/bookborrowing/src/main/res/layout/activity_main.xml
@@ -153,14 +153,17 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="90dp"
         android:layout_marginLeft="10dp"
-        android:gravity="center_vertical">
+        android:layout_marginRight="10dp"
+        android:gravity="center_vertical"
+        android:background="#FFB3A7">
         <ImageView
             android:id="@+id/bookImageView"
             android:layout_width="140dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp" />
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/f"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="140dp"
